umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_Issue3374639.full.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 43
bond_count: 50
sum_formula: C28H5O10
graph6: jkCgGO@??A_A?G??_?_?B??C??G??G?@D???C???O????_??@?????O_???O??C?????C????G??O?O?C???A_????????o?A?????S??????_????A????????O???A?????C????@??????@??????
