umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_Issue3514824.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 26
bond_count: 33
sum_formula: C21O5
graph6: "YO[??C?@???A????_D?OG?c???gAB?@C?C?OCA?AG??W???C_??CO???"
