umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_moleculelike_rdkit_Issue3525799.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 27
bond_count: 29
sum_formula: C15O2
graph6: ZqGW?EAOOA?@?A?@??O?B?C??C@???O??C??C????C???C???C???O??O???
